# advent-of-code

./: CMakeLists.txt  CMakePresets.json
2024/: CMakeLists.txt  create_day.sh
2024/day01/: CMakeLists.txt
2024/day02/: CMakeLists.txt
2024/day03/: CMakeLists.txt
2024/day04/: CMakeLists.txt
2024/day05/: CMakeLists.txt
2024/day06/: CMakeLists.txt
2024/day07/: CMakeLists.txt
2024/day08/: CMakeLists.txt
2024/day09/: CMakeLists.txt
2024/day10/: CMakeLists.txt
2024/day11/: CMakeLists.txt
2024/day12/: CMakeLists.txt
2024/day13/: CMakeLists.txt
2024/day14/: CMakeLists.txt
2024/day15/: CMakeLists.txt
2024/day16/: CMakeLists.txt
2024/day17/: CMakeLists.txt
2024/day18/: CMakeLists.txt
2024/day19/: CMakeLists.txt
2024/day20/: CMakeLists.txt
2024/day21/: CMakeLists.txt
2024/day22/: CMakeLists.txt
2024/day23/: CMakeLists.txt
2024/day24/: CMakeLists.txt
2024/day25/: CMakeLists.txt
2024/lib/: CMakeLists.txt
2024/perf/: CMakeLists.txt
2025/: .clang-tidy  CMakeLists.txt  asan_options.c  create_day.sh  lib_test.cpp
2025/day01/: CMakeLists.txt  day01.c  day01.h  day01_test.cpp
2025/day02/: CMakeLists.txt  day02.c  day02.h  day02_test.cpp
2025/day03/: CMakeLists.txt  day03.c  day03.h  day03_test.cpp
2025/day04/: CMakeLists.txt  day04.c  day04.h  day04_test.cpp
2025/day05/: CMakeLists.txt  day05.c  day05.h  day05_test.cpp
2025/day06/: CMakeLists.txt  day06.c  day06.h  day06_test.cpp
2025/day07/: CMakeLists.txt  day07.c  day07.h  day07_test.cpp
2025/day08/: CMakeLists.txt  day08.c  day08.h  day08_test.cpp
2025/lib/: CMakeLists.txt  debug.h  deleter.h  fatal_error.c  fatal_error.h  file.c  grid.c  grid.h  hash_fns.c  hash_fns.h  hash_map.c  hash_map.h  hash_set.c  hash_set.h  range.c  range.h  string.c  string.h  string_split.c  string_split.h  string_view.c  string_view.h  vector.c  vector.h
hardening/: CMakeLists.txt
